reverting yesterdays file structure change

--- a/Partials/About.html
+++ b/Partials/About.html
@@ -18,9 +18,9 @@
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="/Partials/Services.html">Services</a></li>
-          <li><a href="/Partials/About.html">About</a></li>
-          <li><a href="/Partials/Contact.html">Contact</a></li>
+          <li><a href="Services.html">Services</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
