Upading href Links

--- a/Partials/About.html
+++ b/Partials/About.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shafik Rawass | Photographer</title>
-    <link rel="stylesheet" href="https://bahaa204.github.io/Photography-Website/Assets/CSS/styles.css" />
-    <link rel="stylesheet" href="https://bahaa204.github.io/Photography-Website/Assets/CSS/about.css" />
+    <link rel="stylesheet" href="Photography-Website/Assets/CSS/styles.css" />
+    <link rel="stylesheet" href="Photography-Website/Assets/CSS/about.css" />
     <!-- * Website Icon -->
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/Image.ico" />
+    <link rel="icon" type="image/x-icon" href="/Photography-Website/Assets/Images/Image.ico" />
   </head>
   <body>
     <header class="navbar">
       <h1 class="logo">
-        <a href="/index.html">
-          <img src="/Assets/Images/Image.png" id="logo" />
+        <a href="/Photography-Website/index.html">
+          <img src="/Photography-Website/Assets/Images/Image.png" id="logo" />
         </a>
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="Services.html">Services</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="/Photography-Website/Services.html">Services</a></li>
+          <li><a href="/Photography-Website/About.html">About</a></li>
+          <li><a href="/Photography-Website/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -31,7 +31,7 @@
         <p>Whatsapp:</p>
         <a href="https://wa.me/96171619141" target="_blank">
           <div>
-            <img src="/Assets/Images/whatsapp.png" />
+            <img src="/Photography-Website/Assets/Images/whatsapp.png" />
             Chat on WhatsApp
           </div>
         </a>
@@ -43,7 +43,7 @@
           target="_blank"
         >
           <div>
-            <img src="/Assets/Images/Instagram_icon.png" />
+            <img src="/Photography-Website/Assets/Images/Instagram_icon.png" />
             Visit on Instagram
           </div>
         </a>
@@ -53,7 +53,7 @@
     <section class="about-section">
       <div class="about-container">
         <div class="about-image">
-          <img src="/Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
         </div>
         <div class="about-text">
           <h1>Meet the Eye Behind the Lens</h1>
@@ -88,14 +88,14 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="/Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
         </div>
       </div>
     </section>
     <section class="about-section">
       <div class="about-container">
         <div class="about-image">
-          <img src="/Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
         </div>
         <div class="about-text">
           <h1>Celebrate & Create</h1>
@@ -127,7 +127,7 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="/Assets/Images/Image.png" />
+          <img src="/Photography-Website/Assets/Images/Image.png" />
         </div>
       </div>
     </section>
@@ -151,10 +151,10 @@
         <div class="footer-column">
           <h4>QUICK LINKS</h4>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="/Photography-Website/index.html">Home</a></li>
+            <li><a href="/Photography-Website/Services.html">Services</a></li>
+            <li><a href="/Photography-Website/About.html">About</a></li>
+            <li><a href="/Photography-Website/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
@@ -187,6 +187,6 @@
       </div>
     </footer>
 
-    <script src="/Assets/index.js"></script>
+    <script src="/Photography-Website/Assets/index.js"></script>
   </body>
 </html>
