--- a/Partials/Contact.html
+++ b/Partials/Contact.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shafik Rawass | Photographer</title>
-    <link rel="stylesheet" href="/Assets/CSS/styles.css" />
-    <link rel="stylesheet" href="/Assets/CSS/contact.css" />
+    <link rel="stylesheet" href="/Photography-Website/Assets/CSS/styles.css" />
+    <link rel="stylesheet" href="/Photography-Website/Assets/CSS/contact.css" />
     <!-- * Website Icon -->
-    <link rel="icon" type="image/x-icon" href="/Assets/Images/Image.ico" />
+    <link rel="icon" type="image/x-icon" href="/Photography-Website/Assets/Images/Image.ico" />
   </head>
   <body>
     <header class="navbar">
       <h1 class="logo">
-        <a href="/index.html">
-          <img src="/Assets/Images/Image.png" id="logo" />
+        <a href="/Photography-Website/index.html">
+          <img src="/Photography-Website/Assets/Images/Image.png" id="logo" />
         </a>
       </h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="Services.html">Services</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Contact.html">Contact</a></li>
+          <li><a href="/Photography-Website/Services.html">Services</a></li>
+          <li><a href="/Photography-Website/About.html">About</a></li>
+          <li><a href="/Photography-Website/Contact.html">Contact</a></li>
         </ul>
       </nav>
       <a class="session-btn" id="session-btn">Book a Session</a>
@@ -31,7 +31,7 @@
         <p>Whatsapp - Lebanon:</p>
         <a href="https://wa.me/96171619141" target="_blank">
           <div>
-            <img src="/Assets/Images/whatsapp.png" />
+            <img src="/Photography-Website/Assets/Images/whatsapp.png" />
             Chat on WhatsApp
           </div>
         </a>
@@ -40,7 +40,7 @@
         <p>Whatsapp - Qatar:</p>
         <a href="https://wa.me/97451005843" target="_blank">
           <div>
-            <img src="/Assets/Images/whatsapp.png" />
+            <img src="/Photography-Website/Assets/Images/whatsapp.png" />
             Chat on WhatsApp
           </div>
         </a>
@@ -52,7 +52,7 @@
           target="_blank"
         >
           <div>
-            <img src="/Assets/Images/Instagram_icon.png" />
+            <img src="/Photography-Website/Assets/Images/Instagram_icon.png" />
             Visit on Instagram
           </div>
         </a>
@@ -61,7 +61,7 @@
     </div>
     <section class="hero">
       <video autoplay muted loop playsinline>
-        <source src="/Assets/Images/Placeholder-Video.mp4" type="video/mp4" />
+        <source src="/Photography-Website/Assets/Images/Placeholder-Video.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </section>
@@ -151,10 +151,10 @@
         <div class="footer-column">
           <h4>QUICK LINKS</h4>
           <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="Services.html">Services</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="/Photography-Website/index.html">Home</a></li>
+            <li><a href="/Photography-Website/Services.html">Services</a></li>
+            <li><a href="/Photography-Website/About.html">About</a></li>
+            <li><a href="/Photography-Website/Contact.html">Contact</a></li>
             <li><a id="book-btn">Book Online</a></li>
           </ul>
         </div>
@@ -187,6 +187,6 @@
       </div>
     </footer>
 
-    <script src="/Assets/index.js"></script>
+    <script src="/Photography-Website/Assets/index.js"></script>
   </body>
 </html>
